--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -43,6 +43,7 @@
 
   .body {
     padding: 20px;
+    padding-bottom: 100px;
     flex: 1;
     overflow: scroll;
     display: flex;
@@ -159,7 +160,7 @@
     .form-container .sendButton {
       background-color: #5183fe;
       color: black;
-      padding: 10px 20px;
+      padding: 15px 20px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
